--- a/lesson3/hw3.2.html
+++ b/lesson3/hw3.2.html
@@ -8,13 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        html,body{
+        html,
+        body {
             height: 100%;
 
             margin: 0px;
 
         }
-        .box{
+
+        .box {
             height: 100%;
             display: flex;
             padding-top: 30px;
@@ -23,7 +25,8 @@
             gap: 100px;
             background-color: cornflowerblue;
         }
-        .databox{
+
+        .databox {
             flex-direction: column;
             width: 200px;
             height: 250px;
@@ -33,11 +36,18 @@
             background-color: rgb(113, 178, 240);
             line-height: 15px;
         }
-        span{
+        .databox:hover
+        {
+            transform: scale(1.5);
+            transition: 1.5s;
+        }
+
+        span {
             margin: 10px;
             font-weight: bold;
         }
-        p{
+
+        p {
             margin-left: 10px;
             margin-top: 10px;
         }
@@ -50,62 +60,74 @@
         <p>Довжина дня: 8 годин</p>
         <p>Температура: -5°C</p>
         <p>Температурний рекорд: -25°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
     <div class="databox"><span>Лютий</span>
         <p>Довжина дня: 9 годин</p>
         <p>Температура: -3°C</p>
         <p>Температурний рекорд: -20°C</p>
-        <p>Кількість днів: 28 (29 у високосний рік)</p></div>
+        <p>Кількість днів: 28 (29 у високосний рік)</p>
+    </div>
     <div class="databox"><span>Березень</span>
         <p>Довжина дня: 11 годин</p>
         <p>Температура: 2°C</p>
         <p>Температурний рекорд: -10°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
     <div class="databox"><span>Квітень</span>
         <p>Довжина дня: 13 годин</p>
         <p>Температура: 10°C</p>
         <p>Температурний рекорд: -5°C</p>
-        <p>Кількість днів: 30</p></div>
+        <p>Кількість днів: 30</p>
+    </div>
     <div class="databox"><span>Травень</span>
         <p>Довжина дня: 15 годин</p>
         <p>Температура: 15°C</p>
         <p>Температурний рекорд: 30°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
     <div class="databox"><span>Червень</span>
         <p>Довжина дня: 17 годин</p>
         <p>Температура: 20°C</p>
         <p>Температурний рекорд: 35°C</p>
-        <p>Кількість днів: 30</p></div>
+        <p>Кількість днів: 30</p>
+    </div>
     <div class="databox"><span>Липень</span>
         <p>Довжина дня: 16 годин</p>
         <p>Температура: 25°C</p>
         <p>Температурний рекорд: 40°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
     <div class="databox"><span>Серпень</span>
         <p>Довжина дня: 14 годин</p>
         <p>Температура: 24°C</p>
         <p>Температурний рекорд: 38°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
     <div class="databox"><span>Вересень</span>
         <p>Довжина дня: 12 годин</p>
         <p>Температура: 18°C</p>
         <p>Температурний рекорд: 30°C</p>
-        <p>Кількість днів: 30</p></div>
+        <p>Кількість днів: 30</p>
+    </div>
     <div class="databox"><span>Жовтень</span>
         <p>Довжина дня: 10 годин</p>
         <p>Температура: 10°C</p>
         <p>Температурний рекорд: 25°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
     <div class="databox"><span>Листопад</span>
         <p>Довжина дня: 8 годин</p>
         <p>Температура: 5°C</p>
         <p>Температурний рекорд: 15°C</p>
-        <p>Кількість днів: 30</p></div>
+        <p>Кількість днів: 30</p>
+    </div>
     <div class="databox"><span>Грудень</span>
         <p>Довжина дня: 7 годин</p>
         <p>Температура: -2°C</p>
         <p>Температурний рекорд: -20°C</p>
-        <p>Кількість днів: 31</p></div>
+        <p>Кількість днів: 31</p>
+    </div>
 </div>
 </body>
 
