--- a/lesson13/hw13.1.html
+++ b/lesson13/hw13.1.html
@@ -8,27 +8,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        header{
+
+        header {
             display: flex;
-            gap: 20px;
-            margin-left: 150px;
-            margin-top: 20px;
+            gap: 1vw;
+            margin-left: 7vw;
+            margin-top: 2vh;
             align-items: center;
         }
 
-        ul{
+        ul {
             list-style: none;
             display: flex;
-            gap: 20px;
+            gap: 1vw;
             color: white;
             align-items: center;
             font-size: 20px;
         }
-        video{
+
+        video {
             width: 100%;
             height: 80vh;
             object-fit: cover;
@@ -36,7 +38,8 @@
             top: 0;
             z-index: -1;
         }
-        button{
+
+        button {
             height: 50px;
             width: 110px;
             border-radius: 10px;
@@ -44,7 +47,8 @@
             font-weight: bold;
             font-size: 15px;
         }
-        form{
+
+        form {
             display: flex;
             align-items: center;
             background-color: white;
@@ -57,10 +61,12 @@
 <body>
 <header>
     <div style="display: flex; align-items: center; gap: 15px;">
-        <img style="height: 55px; border-radius: 10px;" src="https://play-lh.googleusercontent.com/KtFwMsqVzBBpTFc8vR5SZRCNBvqknlWurnzTRl4J-2kdZhoM04LjklX9Vh8pl-fYfpU" alt="Pexels">
+        <img style="height: 55px; border-radius: 10px;"
+             src="https://play-lh.googleusercontent.com/KtFwMsqVzBBpTFc8vR5SZRCNBvqknlWurnzTRl4J-2kdZhoM04LjklX9Vh8pl-fYfpU"
+             alt="Pexels">
         <h1 style="font-weight: bold; color: white;">Pexels</h1>
     </div>
-    <nav style="margin-left: 1000px;">
+    <nav style="margin-left: 55vw;">
         <ul>
             <li>Пошук</li>
             <li>Ліцензія</li>
@@ -71,16 +77,19 @@
     </nav>
 </header>
 <video src="12315337-uhd_3840_2160_30fps.mp4" loop autoplay muted></video>
-<div style="display: flex; flex-direction: column; gap: 20px; height: 80vh; justify-content: center; align-items: center;">
-    <p style="text-transform: uppercase; color: white; font-size: 20px; width: 450px;">Найкращі безкоштовні стокові відео від спільноти Pexels</p>
-    <form>
-        <button style="display: flex; align-items: center; justify-content: center; gap: 5px; height: 40px;"><img style="height: 30px;"
-                                                                                                                  src="https://img.lovepik.com/free-png/20210927/lovepik-camera-icon-png-image_401572796_wh1200.png"
-                                                                                                                  alt="cam">Фото</button>
+<div
+        style="display: flex; flex-direction: column; gap: 20px; height: 80vh; justify-content: center; align-items: center;">
+    <p style="text-transform: uppercase; color: white; font-size: 20px; width: 450px;">Найкращі безкоштовні стокові
+        відео від спільноти Pexels</p>
+    <form style="padding-left: 10px; padding-right: 10px;">
+        <button style="display: flex; align-items: center; justify-content: center; gap: 5px; height: 40px;"><img
+                style="height: 30px;"
+                src="https://img.lovepik.com/free-png/20210927/lovepik-camera-icon-png-image_401572796_wh1200.png"
+                alt="cam">Фото</button>
         <input style="height: 50px; width: 500px; border: none;" type="search" id="srch"
                placeholder="Пошук безкоштовних відео">
-        <img style="height: 30px; margin-right: 30px;" src="https://static-00.iconduck.com/assets.00/search-icon-2048x2048-cmujl7en.png"
-             alt="search">
+        <img style="height: 30px; margin-laft: 100vw;"
+             src="https://static-00.iconduck.com/assets.00/search-icon-2048x2048-cmujl7en.png" alt="search">
     </form>
 
 </div>
