--- a/lesson17/Katalog.html
+++ b/lesson17/Katalog.html
@@ -42,39 +42,46 @@
         .btn{
             font-size: 30px;
         }
+        
+        .card{
+            padding: 1vh;
+        }
+        .card-body{
+            padding: 0.75rem;
+        }
 
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Lorem</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Головна</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Katalog.html">Каталог</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">Про нас</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacts.html">Контакти</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="tips.html">Поради</a>
-                    </li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Lorem</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Головна</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="Katalog.html">Каталог</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="about.html">Про нас</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="contacts.html">Контакти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="tips.html">Поради</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <div class="cardarr">
         <div class="card" style="width: 18rem;">
