--- a/lesson17/index.html
+++ b/lesson17/index.html
@@ -29,6 +29,7 @@
             color: rgb(209, 35, 5);
         }
         .smt{
+            padding: 5vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -73,16 +74,16 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Головна</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Katalog.html">Каталог</a>
+                    <a class="nav-link active" href="Katalog.html">Каталог</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">Про нас</a>
+                    <a class="nav-link active" href="about.html">Про нас</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacts.html">Контакти</a>
+                    <a class="nav-link active" href="contacts.html">Контакти</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tips.html">Поради</a>
+                    <a class="nav-link active" href="tips.html">Поради</a>
                 </li>
             </ul>
         </div>
