--- a/lesson17/tips.html
+++ b/lesson17/tips.html
@@ -52,6 +52,12 @@
             height: 63vh;
             object-fit: fill;
         }
+        .carousel-control-prev{
+            left: -80px;
+        }
+        .carousel-control-next{
+            right: -80px;
+        }
 
     </style>
 </head>
@@ -90,7 +96,7 @@
         <img class="imgside"
             src="https://images.unsplash.com/photo-1516205651411-aef33a44f7c2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zmxvd2VyJTIwYXJuYW1lbnR8ZW58MHwxfDB8fHww"
             alt="">
-        <div style="background-color: palegoldenrod; width: 100%;">
+        <div style="background-color: palegoldenrod; width: 100%; padding-left: 4vh; padding-right: 4vh;">
             <h2>Tips</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem, quae nesciunt quo distinctio
                 veniam incidunt non molestiae numquam fuga error voluptatum impedit nobis accusamus a quod voluptates,
