--- a/lesson17/about.html
+++ b/lesson17/about.html
@@ -58,16 +58,16 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Головна</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Katalog.html">Каталог</a>
+                        <a class="nav-link active" href="Katalog.html">Каталог</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Про нас</a>
+                        <a class="nav-link active" href="about.html">Про нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacts.html">Контакти</a>
+                        <a class="nav-link active" href="contacts.html">Контакти</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tips.html">Поради</a>
+                        <a class="nav-link active" href="tips.html">Поради</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
 
     <div style="display: flex; width: 100%;">
         <img class="imgside" src="https://images.unsplash.com/photo-1516205651411-aef33a44f7c2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zmxvd2VyJTIwYXJuYW1lbnR8ZW58MHwxfDB8fHww" alt="">
-        <div style="background-color: palegoldenrod; width: 100%;">
+        <div style="background-color: palegoldenrod; width: 100%; padding-left: 4vh; padding-right: 4vh; padding-top: 0.8vh;">
             <h2>Our Company</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem, quae nesciunt quo distinctio veniam incidunt non molestiae numquam fuga error voluptatum impedit nobis accusamus a quod voluptates, odit, officiis eligendi. Sit quibusdam harum voluptatem laudantium, architecto iste, explicabo vel similique exercitationem expedita dolores velit aliquam maxime iusto provident! Rem.</p>
             <h2>Company history</h2>
