--- a/lesson17/contacts.html
+++ b/lesson17/contacts.html
@@ -59,16 +59,16 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Головна</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Katalog.html">Каталог</a>
+                        <a class="nav-link active" href="Katalog.html">Каталог</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Про нас</a>
+                        <a class="nav-link active" href="about.html">Про нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacts.html">Контакти</a>
+                        <a class="nav-link active" href="contacts.html">Контакти</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tips.html">Поради</a>
+                        <a class="nav-link active" href="tips.html">Поради</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
         <img class="imgside"
             src="https://images.unsplash.com/photo-1516205651411-aef33a44f7c2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zmxvd2VyJTIwYXJuYW1lbnR8ZW58MHwxfDB8fHww"
             alt="">
-        <div style="background-color: palegoldenrod; width: 100%;">
+        <div style="background-color: palegoldenrod; width: 100%; padding-left: 4vh; padding-right: 4vh; padding-top: 0.8vh;">
             <h2>Contacts</h2>
             <p>800-493-5610</p>
             <p><a href="#">Email Customer Service</a></p>
